fixed vw on larger monitors to remove horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  overflow-x: hidden;
 }
 
 a {
